--- a/Demo/MainPage.xaml
+++ b/Demo/MainPage.xaml
@@ -1,27 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <rxui:ReactiveContentPage xmlns="http://xamarin.com/schemas/2014/forms"
                           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                          xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                           xmlns:rxui="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                           xmlns:local="clr-namespace:Demo"
                           x:TypeArguments="local:MainViewModel"
                           xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
                           ios:Page.UseSafeArea="true"
-                          x:Class="Demo.MainPage">
+                          x:Class="Demo.MainPage"
+                          x:DataType="local:MainViewModel"
+                          x:Name="ThisMainPage">
     <Shell.TitleView>
         <SearchBar x:Name="SearchHandler"
+                   Text="{Binding Query}"
                    Placeholder="Select Company" />
     </Shell.TitleView>
     <ContentPage.Content>
 
         <StackLayout>
-            <ListView x:Name="CompaniesListView"
-                      HasUnevenRows="True">
+
+          <ListView x:Name="CompaniesListView"
+                    ItemsSource="{Binding Companies}"
+                    HasUnevenRows="True"
+                    SelectionMode="None">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout>
+                          <ViewCell.ContextActions>
+                            <MenuItem Command="{Binding Path=ViewModel.DeleteCompanyCommand, Source={x:Reference ThisMainPage}}"
+                                      CommandParameter="{Binding Source={RelativeSource Self}, Path=BindingContext}"
+                                      Text="Delete" IsDestructive="True" />
+                          </ViewCell.ContextActions>
+                          <StackLayout x:DataType="local:Company">
                                 <StackLayout Orientation="Horizontal"
                                              Margin="10">
                                     <Label x:Name="NameLabel"
@@ -42,11 +51,13 @@
                                Margin="10"
                                Padding="0">
                             <Entry Placeholder="Company Name"
+                                   Text="{Binding NewCompany}"
                                    x:Name="NewCompanyEntry"></Entry>
                         </Frame>
 
                         <Button Text="Add"
                                 x:Name="AddButton"
+                                Command="{Binding AddCompanyCommand}"
                                 HorizontalOptions="Center" />
                     </StackLayout>
                 </ListView.Footer>
